Update SEO, change some stuff like color, content..

--- a/index.html
+++ b/index.html
@@ -7,11 +7,47 @@
    <!-- Mobile Metas -->
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
+
    <!-- Site Metas -->
    <title>Phòng khám Bình An GL</title>
-   <meta name="keywords" content="">
-   <meta name="description" content="">
+
+   <!-- Updated Meta Tags for SEO -->
+   <meta name="keywords" content="Phòng khám Bình An, Pleiku, Gia Lai, Chăm sóc sức khỏe, Dịch vụ y tế, Bác sĩ chuyên nghiệp, Khám thai sản, Khám Nội Nhi">
+   <meta name="description" content="Phòng khám Đa khoa Bình An - Pleiku, Gia Lai (Bình An Clinic)
+      • Chăm sóc sức khỏe cho người dân Pleiku.
+      • Chúng tôi chăm sóc sức khỏe bằng chất lượng.
+      • Sử dụng BHYT tại Phòng khám Bình An từ thứ 2 đến hết sáng thứ 7, tuyến Thành Phố, Huyện và Thị Xã.
+      Đặt lịch ngay để trải nghiệm dịch vụ chăm sóc chuyên nghiệp.
+       _________________________________
+      👩‍⚕️Mọi thắc mắc cần được tư vấn và đặt hẹn, vui lòng liên hệ:
+      ☎️ HOTLINE 𝟎𝟐𝟔𝟗 𝟑𝟖𝟖𝟑 𝟎𝟐𝟏 - 𝟎𝟖𝟖𝟖𝟖 𝟔𝟔 𝟏𝟏𝟏
+      INBOX FANPAGE: PHÒNG KHÁM ĐA KHOA BÌNH AN - Gia Lai.
+      192 Phan Đình Phùng, Yên Đỗ, Pleiku, Gia Lai - binhanclinic.com
+      ">
    <meta name="author" content="Phu Duc Nguyen">
+
+   <!-- Other Meta Tags (Add as needed) -->
+   <meta name="robots" content="index, follow">
+   <meta name="language" content="Vietnamese">
+   <meta name="revisit-after" content="7 days">
+   <meta name="csrf-token" content="">
+
+   <!-- Open Graph Tags (for social media) -->
+   <meta property="og:title" content="Phòng khám Bình An - Pleiku Gia Lai">
+   <meta property="og:description" content="Phòng khám Bình An - Chúng tôi cam kết cung cấp dịch vụ y tế chất lượng, với đội ngũ bác sĩ và y tá kỳ cựu. Hãy đến với chúng tôi để chăm sóc sức khỏe của bạn.">
+   <meta property="og:image" content="your-image-url.png">
+   <meta property="og:image:alt" content="BinhAnClinc Pleiku, Gia Lai Image">
+   <meta property="og:url" content="https://www.binhanclinic.com">
+   <meta property="og:type" content="website">
+   <meta property="og:site_name" content="BinhAnClinicGL">
+   <meta property="og:locale" content="vi_VN">
+
+   <!-- Facebook Card Tags (for FB) -->
+   <meta property="og:image:alt" content="Image alt text">
+   <meta property="og:site_name" content="Your Website Name">
+   <meta property="og:locale" content="en_US">
+
+
    <!-- Site Icons -->
    <link rel="shortcut icon" href="images/fevicon.ico.png" type="image/x-icon" />
    <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
@@ -72,7 +108,7 @@
                         <li><a data-scroll href="#about">Về chúng tôi</a></li>
                         <li><a data-scroll href="#service">Dịch vụ</a></li>
                         <li><a data-scroll href="#doctors">Y Bác sĩ</a></li>
-                        <li><a data-scroll href="#price">Giá cả</a></li>
+                        <li><a data-scroll href="#price">Bảng Giá</a></li>
 						      <li><a data-scroll href="#testimonials">Nhận xét</a></li>
                         <li><a data-scroll href="#getintouch">Liên hệ</a></li>
                      </ul>
@@ -116,7 +152,7 @@
          <div class="container">
             <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                <div class="row">
-                  <div class="service-time one" style="background:#2895f1;">
+                  <div class="service-time one" style="background:#0a8f4c;">
                      <span class="info-icon"><i class="fa fa-ambulance" aria-hidden="true"></i></span>
                      <h3>Tình huống khẩn cấp</h3>
                      <p>Với đội ngũ bác sĩ và y tá kỳ cựu, chúng tôi đảm bảo rằng bạn sẽ nhận được sự chăm sóc tốt nhất trong trường hợp khẩn cấp.
@@ -126,7 +162,7 @@
             </div>
             <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                <div class="row">
-                  <div class="service-time middle" style="background:#0071d1;">
+                  <div class="service-time middle" style="background:#066636;">
                      <span class="info-icon"><i class="fa fa-clock-o" aria-hidden="true"></i></span> 
                      <h3>Thời gian làm việc</h3>
                      <div class="time-table-section">
@@ -140,7 +176,7 @@
             </div>
             <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                <div class="row">
-                  <div class="service-time three" style="background:#0060b1;">
+                  <div class="service-time three" style="background:#044223;">
                      <span class="info-icon"><i class="fa fa-hospital-o" aria-hidden="true"></i></span>
                      <h3>Dịch vụ tốt nhất</h3>
                      <p style="align-items: start">Đội ngũ Y bác sĩ giàu kinh nghiệm <br>
@@ -162,13 +198,18 @@
             <div class="row">
                <div class="col-md-6">
                   <div class="message-box">
-                     <h4>What We Do</h4>
-                     <h2>Clinic Service</h2>
+                     <h4>BinhAnClinic | Pleiku Gia Lai</h4>
+                     <h2>PHÒNG KHÁM ĐA KHOA BÌNH AN</h2>
                      <p class="lead">Phòng khám Đa khoa Bình An - Pleiku <br>
                         • Chăm sóc sức khỏe cho người dân Pleiku. <br>
                         • Chúng tôi chăm sóc sức khỏe bằng chất lượng. <br>
                         • Sử dụng BHYT tại Phòng khám Bình An từ thứ 2 đến sáng thứ 7. Thành Phố, Huyện và Thị Xã. <br>
-                        • Đặt lịch ngay để trải nghiệm dịch vụ chăm sóc chuyên nghiệp.</p>
+                        • Đặt lịch ngay để trải nghiệm dịch vụ chăm sóc chuyên nghiệp. <br>
+                        Mọi thắc mắc cần được tư vấn và đặt hẹn, vui lòng liên hệ: <br>
+                        ☎️ HOTLINE <a href="tel:02693883021">𝟎𝟐𝟔𝟗 𝟑𝟖𝟖𝟑 𝟎𝟐𝟏</a> - <a href="tel:0888866111">𝟎𝟖𝟖𝟖𝟖 𝟔𝟔 𝟏𝟏𝟏</a> <br>
+                        💬 Tư vấn: <a href="https://www.facebook.com/messages/t/2254488328196518" target="_blank">PHÒNG KHÁM ĐA KHOA BÌNH AN - Gia Lai.</a><br>
+                        📍<a href="https://maps.app.goo.gl/Xyt4PeY45M4yUjBi6" target="_blank">192 Phan Đình Phùng, Yên Đỗ, Pleiku, Gia Lai</a>
+                     </p>
                      <!-- <p> Integer rutrum ligula eu dignissim laoreet. Pellentesque venenatis nibh sed tellus faucibus bibendum. Sed fermentum est vitae rhoncus molestie. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.  </p> -->
                      <a href="#services" data-scroll class="btn btn-light btn-radius btn-brd grd1 effect-1">Tìm hiểu thêm</a>
                   </div>
@@ -247,8 +288,8 @@
                      <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
                         <div class="serv">
                            <span class="icon-service"><img src="images/service-icon2.png" alt="#" /></span>
-                           <h4>PHÒNG THÍ NGHIỆM ĐẠT CHUẨN</h4>
-                           <p>Phòng thí nghiệm của chúng tôi được trang bị đầy đủ để đảm bảo chuẩn đoán chính xác.</p>
+                           <h4>THIẾT BỊ ĐẠT CHUẨN</h4>
+                           <p>Chúng tôi được trang bị đầy đủ để đảm bảo chuẩn đoán chính xác.</p>
                         </div>
                      </div>
                      <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
@@ -269,7 +310,7 @@
                         <div class="serv">
                            <span class="icon-service"><img src="images/service-icon5.png" alt="#" /></span>
                            <h4>THUỐC TỐT VÀ BHYT</h4>
-                           <p>Quỹ bảo hiểm y tế thanh toán 80%, 95% hoặc 100% chi phí khám sức khỏe bảo hiểm y tế, chữa bệnh</p>
+                           <p>Quỹ bảo hiểm y tế thanh toán chi phí khám sức khỏe bảo hiểm y tế, chữa bệnh</p>
                         </div>
                      </div>
                      <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
@@ -675,8 +716,7 @@
                </form>
             </div>
             <div id="googleMap" style="width: 100%; height: 450px;">
-               <!--  -->
-               <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1995386.9894882615!2d106.15641613337775!3d12.366835341087645!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x316c1f79de5bd4d1%3A0xd660ce361536fec0!2zMTg2LTE5OCBQaGFuIMSQw6xuaCBQaMO5bmcsIFAuVMOieSBTxqFuLCBUaMOgbmggcGjhu5EgUGxlaWt1LCBHaWEgTGFpIDYwMDAwMCwgVmnhu4d0IE5hbQ!5e0!3m2!1svi!2s!4v1697034199859!5m2!1svi!2s" style="border:0; padding-left: 0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
+               <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1935.809440738125!2d107.99522921713269!3d13.981276451210602!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x316c1f79df193c3f%3A0xfe0fb415833e5fc1!2zUGjDsm5nIGtow6FtIMSRYSBraG9hIELDrG5oIEFu!5e0!3m2!1svi!2s!4v1697141254469!5m2!1svi!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
          </div>
       </div>
